WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312115
[JSC] Fix `Object.defineProperties` Proxy trap ordering
https://bugs.webkit.org/show_bug.cgi?id=312115
Summary
[JSC] Fix `Object.defineProperties` Proxy trap ordering
Sosuke Suzuki
Reported
2026-04-12 19:45:48 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-04-12 19:46:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62605
EWS
Comment 2
2026-04-18 01:43:49 PDT
Committed
311520@main
(8eca46ec5bfb): <
https://commits.webkit.org/311520@main
> Reviewed commits have been landed. Closing PR #62605 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-18 01:44:13 PDT
<
rdar://problem/175068687
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug